Fix some of the card layout problems

--- a/src/frontend/src/app/components/landing/landing.component.scss
+++ b/src/frontend/src/app/components/landing/landing.component.scss
@@ -20,6 +20,7 @@
 }
 
 .event {
-  width : 25%;
-  margin-bottom: 10px;
+  margin: 25px;
+  box-sizing: border-box;
+  width: 25%;
 }
